<resources>
    <string name="app_name">Microprocessor</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Microprocessor</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate Us</string>
    <string name="accumulator">
<p><b>It is an 8-bit register used to perform arithmetic, logical, I/O
    and LOAD/STORE operations. It is connected to internal data bus and ALU.</b></p></string>
    <string name="alu">
        <p><b>
            It basically performs 8-bit arithmetic operations like +, -, *, / and to perform logical operations like AND, OR, NOT etc. ALU gets inputs from the accumulator and temporary register on which it performs such operations.
            After processing the necessary operations, the result is stored back in the accumulator.

        </b></p>

    </string>
    <string name="control">
        <p><b>
            This unit is responsible for generating timing signals and control signals and also it controls both inside and outside activities of Intel8085microprocessor. Timing and control unit is very important as it synchronizes the registers and flow of data through various registers and other units. It consists of an oscillator and controller sequencer which sends control signals needed for internal and external control of data and other units.
        </b></p>
    </string>
    <string name="general">
        <p><b>
            B, C, D, E, Hand L are six general purpose registers are there in 8085microprocessor. Each register can hold 8-bit data.
            They can work in pairs such as BC, DE, and HL to store 16-bit data where HL pair work as a memory pointer.
        </b></p>
    </string>
    <string name="counter">
        <p><b>
            Program Counter is a 16-bit register used to store the memory address location of the next instruction to be executed. Microprocessor increments
            the program whenever an instruction is being executed so that the program counter points to the memory address of the next instruction that is going to be executed.
        </b></p>
    </string>
    <string name="stack">
        <p><b>
            The stack pointer is also a 16-bit register.
            It is used as a memory pointer. Stack pointer gets incremented when data is retrieved from the stack which is called pop operation and decremented when data is loaded into the stack that is known as a push operation
        </b></p>
    </string>
    <string name="register">
        <p><b>
            The 16-bit increment and decrement register are used to increment and decrement the PC value and SP value by 1.
            Increment or decrement can be performed on any register or a memory location.
        </b></p>
    </string>
    <string name="buffer">
    <p><b>
        The content of the program counter and stack pointer are loaded into address data buffer and address buffer.
        These buffers are bi-directional when used for data. The CPU can exchange the desired data with the memory and I/O chips as The memory and I/O chips are connected to these buses. The address data buffer is connected to both external and internal bus which consists of 8 bits.
    </b></p>
   </string>
    <string name="temporary">
        <p><b>
            temporary register is an 8-bit register, which holds the temporary data of arithmetic and logical operations.
            This register can only be accessed by the microprocessor and it is completely inaccessible to programmers.
        </b></p>
    </string>
    <string name="flag">
        <p><b>
            This register is actually a group of flip-flops to give the status of different operations result. When ALU performs an operation,
            the result is transferred to the internal data bus and the status of the result will be stored in flip-flops.
        </b></p>
    </string>
    <string name="interupt">
        <p><b>
            When a microprocessor is executing the main program and whenever an interrupt occurs, the microprocessor shifts the control from the main program to process the incoming request.
            After the request is completed, the control goes back to the main program.
        </b></p>
    </string>
    <string name="serial">
        <p><b>
            It controls the serial data communication by using these two instructions: SID (Serial input data) and SOD (Serial output data).
        </b></p>
    </string>
    <string name="decoder">
        <p><b>
            The instruction register is also 8-bit register. the instruction registers are specifically to store the instructions like adding two data’s, moving a data, copying a data etc. that are fetched from memory.
        </b></p>
    </string>
    <string name="s1">
        <h1> <p><b><u>Data Transfer</u></b></p></h1>
    </string>
    <string name="i11">
        <p>
            <b>
                Move data between registers or between memory and registers
            </b>
        </p>
    </string>
    <string name="s2">
        <p><b>
            <u>Arithmetic</u>
        </b></p>
    </string>
    <string name="i21">
        <p>
            <b>
                Add,Subtract,increment,or decrement data in registers or memory
            </b>
        </p>
    </string>
    <string name="s3">
        <p><b>
            <u>
                Logical
            </u>
        </b></p>
    </string>
    <string name="i31">
        <p>
            <b>
                Performs logical operations on data in registers or memory
            </b>
        </p>
    </string>
    <string name="s4">
        <p><b><u>
            Branching
        </u></b></p>
    </string>
    <string name="i41">
        <p>
            <b>
                Alter normal sequential program flow,either unconditionally or conditionally
            </b>
        </p>
    </string>
    <string name="s5">
        <p><b>
            <u>
                Control
            </u>
        </b></p>
    </string>
    <string name="i51">
        <p>
            <b>
                Performs instructions for input/output port,stack and machine control
            </b>
        </p>
    </string>
    <string name="program1">program 1:</string>
    <string name="statement1"><b>Statement:</b> 8085 program to store 8-bit data in memory.</string>
    <string name="ins_1_1">MVI</string>
    <string name="ins_1_2">STA</string>
    <string name="ins_1_3">HLT</string>
    <string name="opc_1_1">A,52H</string>
    <string name="opc_1_2">4000H</string>
    <string name="remark_1_1">[Store 52H in the Accumulator]</string>
    <string name="remark_1_2">[Copy accumulator contents at address 4000H ]</string>
    <string name="remark_1_3">[Terminate the program]</string>
    <string name="program2">program 2:</string>
    <string name="statement2"><b>Statement:</b> 8085 program to exchange the content of memory locations.</string>
    <string name="ins_2_1">LDA</string>
    <string name="ins_2_2">MOV</string>
    <string name="ins_2_3">LDA</string>
    <string name="ins_2_4">STA</string>
    <string name="ins_2_5">MOV</string>
    <string name="ins_2_6">STA</string>
    <string name="ins_2_7">HLT</string>
    <string name="opc_2_1">2000H</string>
    <string name="opc_2_2">B,A</string>
    <string name="opc_2_3">4000H</string>
    <string name="opc_2_4">2000H</string>
    <string name="opc_2_5">A,B</string>
    <string name="opc_2_6">4000</string>
    <string name="remark_2_1">[Get the content of memory location 2000H into accumulator]</string>
    <string name="remark_2_2">[Save the content into B register]</string>
    <string name="remark_2_3">[Get the content of memory location 4000H into accumulator]</string>
    <string name="remark_2_4">[Store the content of accumulator at address 2000H]</string>
    <string name="remark_2_5">[Get the saved contents back into A register]</string>
    <string name="remark_2_6">[Store the contents of accumulator at address 4000H]</string>
    <string name="remark_2_7">[Terminate the program]</string>
    <string name="program3">program 3:</string>
    <string name="statement3"><b>Statement:</b> 8085 program to find one\'s complement of a 8-bit number.</string>
    <string name="ins_3_1">LDA</string>
    <string name="ins_3_2">CMA</string>
    <string name="ins_3_3">STA</string>
    <string name="ins_3_4">HLT</string>
    <string name="opc_3_1">2000H</string>
    <string name="opc_3_2">2001H</string>
    <string name="remark_3_1">[Load contents of 2000H into A]</string>
    <string name="program4">program 4:</string>
    <string name="statement4"><b>Statement:</b> 8085 program to find two\'s complement of a 8-bit number.</string>
    <string name="ins_4_1">LDA</string>
    <string name="ins_4_2">CMA</string>
    <string name="ins_4_3">INR</string>
    <string name="ins_4_4">STA</string>
    <string name="ins_4_5">HLT</string>
    <string name="opc_4_1">2000H</string>
    <string name="opc_4_3">A</string>
    <string name="opc_4_4">2001H</string>
    <string name="remark_4_1">[Load contents of 2000H into  A]</string>
    <string name="remark_4_2">[Complement A]</string>
    <string name="remark_4_3">[Increment A]</string>
    <string name="remark_4_4">[Store the result in 2001H]</string>
    <string name="remark_4_5">[Terminate the program]</string>
    <string name="com1">Comparison of 8085 and 8086</string>
    <string name="com2">1. Size:-</string>
    <string name="com3">8085 is 8 bit microprocessor whereas 8086 is 16 bit microprocessor.</string>
    <string name="com4">2. Address Bus:-</string>
    <string name="com5">8085 has 16 bit address bus and 8086 has 20 bit address bus.</string>
    <string name="com6">3. Memory:-</string>
    <string name="com7">8085 can access up to 2^16=64 kb of memory whereas 8086 can access up to 2^20= 1 MB of memory.</string>
    <string name="com8">4. Instruction Queue:-</string>
    <string name="com9">8085 doesn\'t have an instruction queue whereas 8086 has instruction queue.</string>
    <string name="com10">5. Pipelining:-</string>
    <string name="com11">8085 does not support pipelined architecture whereas 8086 supports pipelined architecture.</string>
    <string name="com12">6. Multiprocessing Support:-</string>
    <string name="com13">8085 does not support multiprocessing whereas 8086 supports.</string>
    <string name="com14">7. I/O</string>
    <string name="com15">8085 can address 2^8 = 256 I/O and 8086 can access 2^16 = 65,536 I/O </string>
    <string name="com16">8. Arithmetic Support:-</string>
    <string name="com17">8085 only supports integer and decimal whereas 8086 supports integer, decimal and ASCII arithmetic.</string>
    <string name="com18">9. Multiplication and Division:-</string>
    <string name="com19">8085 does not support whereas 8086 supports.</string>
    <string name="com20">10. Operating Modes:-</string>
    <string name="com21">8085 supports only single operating mode whereas 8086 operates in two modes.</string>
    <string name="com22">11. External Hardware:- </string>
    <string name="com23">8085 requires less external hardware whereas 8086 requires more external hardware.</string>
    <string name="com24">12. Cost:-</string>
    <string name="com25">The cost of 8085 is low and 8086 is high.</string>
    <string name="com26">13. Memory Segmentation:-</string>
    <string name="com27">In 8085, memory space is not segmented but in 8086, memory space is segmented.</string>
    <string name="com28">There are some of the difference mentioned below</string>
</resources>