<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interrupt"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/mem1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/com1"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mem2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem1"
                        android:text="@string/com28"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/mem3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem2"
                        android:layout_marginTop="20dp"
                        android:text="@string/com2"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem3"
                        android:text="@string/com3"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem4"
                        android:layout_marginTop="20dp"
                        android:text="@string/com4"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem5"
                        android:text="@string/com5"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem6"
                        android:layout_marginTop="20dp"
                        android:text="@string/com6"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem7"
                        android:text="@string/com7"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem8"
                        android:layout_marginTop="20dp"
                        android:text="@string/com8"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem9"
                        android:text="@string/com9"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem10"
                        android:layout_marginTop="20dp"
                        android:text="@string/com10"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem11"
                        android:text="@string/com11"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem12"
                        android:layout_marginTop="20dp"
                        android:text="@string/com12"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem13"
                        android:text="@string/com13"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem14"
                        android:layout_marginTop="20dp"
                        android:text="@string/com14"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem15"
                        android:text="@string/com15"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem16"
                        android:layout_marginTop="20dp"
                        android:text="@string/com16"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem17"
                        android:text="@string/com17"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem18"
                        android:layout_marginTop="20dp"
                        android:text="@string/com18"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem19"
                        android:text="@string/com19"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem20"
                        android:layout_marginTop="20dp"
                        android:text="@string/com20"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem21"
                        android:text="@string/com21"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem22"
                        android:layout_marginTop="20dp"
                        android:text="@string/com22"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem23"
                        android:text="@string/com23"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem24"
                        android:layout_marginTop="20dp"
                        android:text="@string/com24"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem26"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem25"
                        android:text="@string/com25"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/mem27"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem26"
                        android:layout_marginTop="20dp"
                        android:text="@string/com26"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/mem28"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mem27"
                        android:text="@string/com27"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />



                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>